--- a/index.html
+++ b/index.html
@@ -220,7 +220,10 @@
 
         </div>
 
-        <div class="credit"> created by <span>Yash Baid</span> | all rights reserved! </div>
+       <div class="credit"> created by <span>Yash Baid</span><a href="https://webvision21.netlify.app/"
+                target="_blank">| Web Vision
+                |</a> all rights
+            reserved! </div>
 
     </section>
 
