--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <a href="#styles">styles</a>
         </nav>
 
-        <div id="menu-btn" class="fas fa-bars"></div>
 
     </section>
     <!-- header -->
@@ -33,7 +32,7 @@
     <!-- home -->
 
     <section class="home" id="home">
-
+        <img src="banner.png" alt="Responsive Image" style="max-width: 100%; height: auto;">
 
 
     </section>
@@ -220,7 +219,7 @@
 
         </div>
 
-       <div class="credit"> created by <span>Yash Baid</span><a href="https://webvision21.netlify.app/"
+        <div class="credit"> created by <span>Yash Baid</span><a href="https://webvision21.netlify.app/"
                 target="_blank">| Web Vision
                 |</a> all rights
             reserved! </div>
